
- Improved the __cmp__ method generated for Slice structures.

- Slice comments are now converted into Python docstrings in the
  generated code.

- Added the administrative facet API.

- Integer values are now accepted where floating point values are
  expected.

- Changed the way sequences are unmarshaled to protect against
  malicious messages with faked very large sequence count values.


Ruby Changes
============

- The following API as been deprecated and will be removed in a
  future release.

  ObjectPrx::ice_getHash()

- Changed the way sequences are unmarshaled to protect against
  malicious messages with faked very large sequence count values.


PHP Changes
===========

- Enumerations are now supported as dictionary key types.

- Integer values are now accepted where floating point values are
  expected.

- Added slice2php and removed dynamic Slice translation.

- Added support for PHP namespaces (requires PHP 5.3 or later).

- Added ability to create and destroy communicators. Use the function
  Ice_initialize (\Ice\initialize) to create a communicator. By
  default, all communicators created during a page request are
  destroyed automatically at the end of the request.

- Added ability to register a communicator for use in a subsequent
  page request. Three new functions are provided:

  * Ice_register   (\Ice\register)
  * Ice_unregister (\Ice\unregister)
  * Ice_find       (\Ice\find)

- Added a demo (in Glacier2/hello) that shows how to register and
  use the same communicator instance for multiple page requests in a
  PHP session.

- Added support for all Slice local exceptions.

- The INI settings are now used to configure property sets that a
  script can use to initialize a communicator. The ice.slice directive
  is no longer supported.

- Added the function Ice_createProperties().

- Now generating minimal proxy classes to simplify downcasting.

- Removed the "$ICE" global variable.

- Removed the following methods:

  $ICE->setProperty()